--- a/BasicGraphicsEngine.csproj
+++ b/BasicGraphicsEngine.csproj
@@ -9,9 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SkiaSharp" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Extended" Version="1.60.0" />
-    <PackageReference Include="SkiaSharp.Svg" Version="1.60.0" />
+    <PackageReference Include="NGraphics" Version="0.5.0" />
   </ItemGroup>
 
 </Project>
