not sure what I changed tbh

--- a/BasicGraphicsEngine.csproj
+++ b/BasicGraphicsEngine.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Examples\DrawParameters.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NGraphics" Version="0.5.0" />
   </ItemGroup>
 
