--- a/BasicGraphicsEngine.csproj
+++ b/BasicGraphicsEngine.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>52eafbad-3af1-4621-84a0-98ca56dc14da</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Examples\DrawParameters.cs" />
   </ItemGroup>
-
 </Project>
